Kasuta Java 21 Sequenced Collections operatsioone